docs/power/v4/POWER.md
# Planted-signal power test

## Pre-registered thresholds (written before any run)

- Headline metric: mean test IC over non-overlapping stride-H anchors;
  SE = (1/sqrt(N)) / sqrt(n_monthly).
- **Detection** = mean test IC > 2*SE.
- **gamma=0 acceptance** (false-positive check, all null runs): |test IC| < 2*SE
  AND best_epoch small AND no val improvement beyond noise. At a 2-sigma
  threshold, ~0-1 of the null runs may cross by chance — expected, and said here
  in advance so it can't become a post-hoc story.
- Recovery fraction = model test IC / same-panel empirical oracle test IC.


## Results

| γ (bps) | seed | model | loss | test IC | detected | best epoch | excess Sharpe |
|---|---|---|---|---|---|---|---|
| 0 | 0 | **oracle** | - | -0.0029 | - | - | - |
| 0 | 0 | **p7_oracle** | - | +0.0027 | - | - | - |
| 0 | 0 | p7_encoder | ic | -0.0012 | no | 2 | +0.32 |
| 0 | 0 | gated_attention | ic | -0.0012 | no | 2 | +0.32 |
| 0 | 0 | corr_bias_attention | ic | -0.0012 | no | 2 | +0.32 |
| 0 | 0 | gated_curriculum | ic | -0.0051 | no | 0 | +0.32 |
| 20 | 0 | **oracle** | - | +0.0075 | - | - | - |
| 20 | 0 | **p7_oracle** | - | +0.0051 | - | - | - |
| 20 | 0 | p7_encoder | ic | -0.0005 | no | 2 | +0.48 |
| 20 | 0 | gated_attention | ic | -0.0005 | no | 2 | +0.48 |
| 20 | 0 | corr_bias_attention | ic | -0.0005 | no | 2 | +0.48 |
| 20 | 0 | gated_curriculum | ic | +0.0018 | no | 47 | +0.54 |
| 40 | 0 | **oracle** | - | +0.0180 | - | - | - |
| 40 | 0 | **p7_oracle** | - | +0.0080 | - | - | - |
| 40 | 0 | p7_encoder | ic | +0.0018 | no | 3 | +0.69 |
| 40 | 0 | gated_attention | ic | +0.0018 | no | 3 | +0.69 |
| 40 | 0 | corr_bias_attention | ic | +0.0018 | no | 3 | +0.68 |
| 40 | 0 | gated_curriculum | ic | +0.0031 | no | 47 | +0.78 |
| 80 | 0 | **oracle** | - | +0.0380 | - | - | - |
| 80 | 0 | **p7_oracle** | - | +0.0149 | - | - | - |
| 80 | 0 | p7_encoder | ic | +0.0086 | YES | 19 | +1.33 |
| 80 | 0 | gated_attention | ic | +0.0086 | YES | 19 | +1.33 |
| 80 | 0 | corr_bias_attention | ic | +0.0264 | YES | 33 | +1.22 |
| 80 | 0 | gated_curriculum | ic | +0.0078 | no | 45 | +1.37 |
| 120 | 0 | **oracle** | - | +0.0606 | - | - | - |
| 120 | 0 | **p7_oracle** | - | +0.0234 | - | - | - |
| 120 | 0 | p7_encoder | ic | +0.0161 | YES | 19 | +2.00 |
| 120 | 0 | gated_attention | ic | +0.0161 | YES | 19 | +2.00 |
| 120 | 0 | corr_bias_attention | ic | +0.0413 | YES | 25 | +1.67 |
| 120 | 0 | gated_curriculum | ic | +0.0164 | YES | 49 | +2.21 |
| 0 | 1 | **oracle** | - | -0.0097 | - | - | - |
| 0 | 1 | **p7_oracle** | - | +0.0146 | - | - | - |
| 0 | 1 | p7_encoder | ic | -0.0102 | no | 0 | -0.01 |
| 0 | 1 | gated_attention | ic | -0.0102 | no | 0 | -0.01 |
| 0 | 1 | corr_bias_attention | ic | -0.0094 | no | 0 | -0.01 |
| 0 | 1 | gated_curriculum | ic | -0.0127 | no | 6 | -0.16 |
| 20 | 1 | **oracle** | - | +0.0010 | - | - | - |
| 20 | 1 | **p7_oracle** | - | +0.0124 | - | - | - |
| 20 | 1 | p7_encoder | ic | -0.0015 | no | 1 | +0.08 |
| 20 | 1 | gated_attention | ic | -0.0015 | no | 1 | +0.08 |
| 20 | 1 | corr_bias_attention | ic | -0.0030 | no | 1 | +0.07 |
| 20 | 1 | gated_curriculum | ic | -0.0101 | no | 6 | -0.01 |
| 40 | 1 | **oracle** | - | +0.0110 | - | - | - |
| 40 | 1 | **p7_oracle** | - | +0.0099 | - | - | - |
| 40 | 1 | p7_encoder | ic | -0.0030 | no | 9 | +0.10 |
| 40 | 1 | gated_attention | ic | -0.0030 | no | 9 | +0.10 |
| 40 | 1 | corr_bias_attention | ic | -0.0040 | no | 34 | +0.14 |
| 40 | 1 | gated_curriculum | ic | -0.0071 | no | 6 | +0.15 |
| 80 | 1 | **oracle** | - | +0.0340 | - | - | - |
| 80 | 1 | **p7_oracle** | - | +0.0036 | - | - | - |
| 80 | 1 | p7_encoder | ic | +0.0010 | no | 18 | +0.49 |
| 80 | 1 | gated_attention | ic | +0.0010 | no | 18 | +0.49 |
| 80 | 1 | corr_bias_attention | ic | +0.0036 | no | 28 | +0.52 |
| 80 | 1 | gated_curriculum | ic | +0.0006 | no | 6 | +0.53 |
| 120 | 1 | **oracle** | - | +0.0588 | - | - | - |
| 120 | 1 | **p7_oracle** | - | -0.0035 | - | - | - |
| 120 | 1 | p7_encoder | ic | +0.0103 | YES | 18 | +1.29 |
| 120 | 1 | gated_attention | ic | +0.0103 | YES | 18 | +1.29 |
| 120 | 1 | corr_bias_attention | ic | +0.0220 | YES | 23 | +0.90 |
| 120 | 1 | gated_curriculum | ic | +0.0105 | YES | 6 | +0.99 |
| 0 | 2 | **oracle** | - | -0.0003 | - | - | - |
| 0 | 2 | **p7_oracle** | - | +0.0070 | - | - | - |
| 0 | 2 | p7_encoder | ic | +0.0036 | no | 11 | -0.57 |
| 0 | 2 | gated_attention | ic | +0.0036 | no | 11 | -0.58 |
| 0 | 2 | corr_bias_attention | ic | +0.0036 | no | 11 | -0.58 |
| 0 | 2 | gated_curriculum | ic | +0.0039 | no | 69 | -0.42 |
| 20 | 2 | **oracle** | - | +0.0104 | - | - | - |
| 20 | 2 | **p7_oracle** | - | +0.0065 | - | - | - |
| 20 | 2 | p7_encoder | ic | +0.0042 | no | 11 | -0.42 |
| 20 | 2 | gated_attention | ic | +0.0042 | no | 11 | -0.42 |
| 20 | 2 | corr_bias_attention | ic | +0.0041 | no | 11 | -0.43 |
| 20 | 2 | gated_curriculum | ic | +0.0042 | no | 68 | -0.27 |
| 40 | 2 | **oracle** | - | +0.0212 | - | - | - |
| 40 | 2 | **p7_oracle** | - | +0.0067 | - | - | - |
| 40 | 2 | p7_encoder | ic | +0.0059 | no | 11 | -0.22 |
| 40 | 2 | gated_attention | ic | +0.0059 | no | 11 | -0.22 |
| 40 | 2 | corr_bias_attention | ic | +0.0058 | no | 11 | -0.23 |
| 40 | 2 | gated_curriculum | ic | +0.0046 | no | 43 | -0.10 |
| 80 | 2 | **oracle** | - | +0.0431 | - | - | - |
| 80 | 2 | **p7_oracle** | - | +0.0094 | - | - | - |
| 80 | 2 | p7_encoder | ic | +0.0125 | YES | 11 | +0.30 |
| 80 | 2 | gated_attention | ic | +0.0125 | YES | 11 | +0.30 |
| 80 | 2 | corr_bias_attention | ic | +0.0125 | YES | 11 | +0.28 |
| 80 | 2 | gated_curriculum | ic | +0.0137 | YES | 17 | +0.32 |
| 120 | 2 | **oracle** | - | +0.0662 | - | - | - |
| 120 | 2 | **p7_oracle** | - | +0.0168 | - | - | - |
| 120 | 2 | p7_encoder | ic | +0.0227 | YES | 11 | +0.97 |
| 120 | 2 | gated_attention | ic | +0.0226 | YES | 11 | +0.97 |
| 120 | 2 | corr_bias_attention | ic | +0.0355 | YES | 27 | +0.56 |
| 120 | 2 | gated_curriculum | ic | +0.0251 | YES | 4 | +0.72 |

Absolute detection threshold: 2·SE = 0.0082 (secondary — slow scores are
serially correlated across anchors, so absolute IC has far fewer effective
observations than anchor counts suggest).

## Verdict (paired contrasts — the official statistic)

Within-seed IC(γ) − IC(0) cancels the serially-correlated score-baseline noise
that the paired common-random-numbers design was built to cancel.

- **oracle / -**: minimum detected γ = 20 bps/month. γ20:+0.0106(±0.0002)* γ40:+0.0210(±0.0004)* γ80:+0.0427(±0.0018)* γ120:+0.0662(±0.0029)*
- **p7_oracle / -**: no detection at any planted strength. γ20:-0.0001(±0.0027) γ40:+0.0001(±0.0058) γ80:+0.0012(±0.0134) γ120:+0.0041(±0.0232)
- **corr_bias_attention / ic**: minimum detected γ = 40 bps/month. γ20:+0.0026(±0.0038) γ40:+0.0036(±0.0019)* γ80:+0.0165(±0.0113)* γ120:+0.0353(±0.0073)*
- **gated_attention / ic**: minimum detected γ = 40 bps/month. γ20:+0.0033(±0.0054) γ40:+0.0041(±0.0030)* γ80:+0.0100(±0.0013)* γ120:+0.0189(±0.0018)*
- **gated_curriculum / ic**: minimum detected γ = 40 bps/month. γ20:+0.0033(±0.0039) γ40:+0.0049(±0.0044)* γ80:+0.0120(±0.0022)* γ120:+0.0220(±0.0012)*
- **p7_encoder / ic**: minimum detected γ = 40 bps/month. γ20:+0.0033(±0.0054) γ40:+0.0041(±0.0030)* γ80:+0.0100(±0.0013)* γ120:+0.0189(±0.0018)*
- **γ=0 false positives**: 5 of 15 null runs crossed 2·SE — INVESTIGATE.
